--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -13,6 +13,18 @@
         <li>{{ choice.choice_text}}</li>
         {% endfor %}
     </ul>
+    <form action="{% url 'polls:vote' question.id %} method=" post">
+        % csrf_token %}
+        <fieldset>
+            <legend>
+                <h1>{{ question.question_text }}</h1>
+            </legend>
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+            {% for choice in question.choice_set.all %}
+
+            }
+        </fieldset>
+    </form>
 
 </body>
 
